src/objects/Territory.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Used in Business Intelligence to identify for which Business Unit the territory is applicable</description>
        <inlineHelpText>Used in Business Intelligence to identify for which Business Unit the territory is applicable</inlineHelpText>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Kyphon</fullName>
                </value>
                <value>
                    <fullName>Cross-BU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <description>Used in Business Intelligence to identify the territory level</description>
        <inlineHelpText>Used in Business Intelligence to identify the territory level</inlineHelpText>
        <label>Territory Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Country Group</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>District</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Account_ID__c</fullName>
        <description>Used in Business Intelligence to identify the primary user of this territory. In combination with the Business Unit and Territory Type  field BI can determine the role of this user</description>
        <inlineHelpText>Copy paste the User Account Record&apos;s ID of the primary user in this field. For Diabetes this fields needs to be filled out mandatory. The user&apos;s account must be active. Used in Business Intelligence to identify the primary user of this territory.</inlineHelpText>
        <label>Primary User Account ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
</CustomObject>